#518, fixed overlapping required textbook tag in textbook modal footer

--- a/static/css/timetable/textbook_modal.css
+++ b/static/css/timetable/textbook_modal.css
@@ -62,6 +62,7 @@
 }
 
 .textbook-modal .modal-footer {
+    z-index: 11;
     height: 66px;
     width: 100%;
     border: 1px solid #ddd;
